5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1593_2426.log
== TEST (2019-03-26 11:03:08) 
-- CODE:
tempo = float(input("Informe o tempo gasto na viagem em horas: "))
vel = float(input("Informe a velocidade media: "))

dist = vel * tempo
lit = 12 * dist
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = fecha
NameError: name 'fecha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:40) 
-- CODE:
tempo = float(input("Informe o tempo gasto na viagem em horas: "))
vel = float(input("Informe a velocidade media: "))

dist = vel * tempo
lit = 12 * dist
print(dist)
print(lit)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:36) 
-- CODE:
tempo = float(input("Informe o tempo gasto na viagem em horas: "))
vel = float(input("Informe a velocidade media: "))

dist = vel * tempo
lit = dist / 12
print(dist)
print(lit)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:04:46) 
-- CODE:
tempo = float(input("Informe o tempo gasto na viagem em horas: "))
vel = float(input("Informe a velocidade media: "))

dist = vel * tempo
lit = dist / 12
print(dist)
print(lit)
-- EXECUTION TIME:
0.163629
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
